// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomHeaderButtons-test.tsx should render 1`] = `
<DocumentFragment>
  <div
    aria-current="false"
    aria-label="Chat"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_timelineCardButton"
    role="button"
    tabindex="0"
  />
  <div
    aria-current="false"
    aria-label="Threads"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_threadsButton"
    data-testid="threadsButton"
    role="button"
    tabindex="0"
  />
  <div
    aria-current="false"
    aria-label="Notifications"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_notifsButton"
    role="button"
    tabindex="0"
  />
  <div
    aria-current="false"
    aria-label="Room info"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_roomSummaryButton"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`RoomHeaderButtons-test.tsx thread activity does change the thread button 1`] = `
<DocumentFragment>
  <div
    aria-current="false"
    aria-label="Chat"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_timelineCardButton"
    role="button"
    tabindex="0"
  >
    <div
      class="mx_RoomHeader_button_indicator_bg"
    />
    <div
      class="mx_RoomHeader_button_indicator mx_RoomHeader_button_indicator--bold"
    />
  </div>
  <div
    aria-current="false"
    aria-label="Threads"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RoomHeader_button--unread mx_RightPanel_threadsButton"
    data-testid="threadsButton"
    role="button"
    tabindex="0"
  >
    <div
      class="mx_RoomHeader_button_indicator_bg"
    />
    <div
      class="mx_RoomHeader_button_indicator mx_RoomHeader_button_indicator--bold"
    />
  </div>
  <div
    aria-current="false"
    aria-label="Notifications"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_notifsButton"
    role="button"
    tabindex="0"
  />
  <div
    aria-current="false"
    aria-label="Room info"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_roomSummaryButton"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`RoomHeaderButtons-test.tsx thread notification does change the thread button 1`] = `
<DocumentFragment>
  <div
    aria-current="false"
    aria-label="Chat"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_timelineCardButton"
    role="button"
    tabindex="0"
  >
    <div
      class="mx_RoomHeader_button_indicator_bg"
    />
    <div
      class="mx_RoomHeader_button_indicator mx_RoomHeader_button_indicator--gray"
    />
  </div>
  <div
    aria-current="false"
    aria-label="Threads"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RoomHeader_button--unread mx_RightPanel_threadsButton"
    data-testid="threadsButton"
    role="button"
    tabindex="0"
  >
    <div
      class="mx_RoomHeader_button_indicator_bg"
    />
    <div
      class="mx_RoomHeader_button_indicator mx_RoomHeader_button_indicator--gray"
    />
  </div>
  <div
    aria-current="false"
    aria-label="Notifications"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_notifsButton"
    role="button"
    tabindex="0"
  />
  <div
    aria-current="false"
    aria-label="Room info"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_roomSummaryButton"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`RoomHeaderButtons-test.tsx thread notification does change the thread button 2`] = `
<DocumentFragment>
  <div
    aria-current="false"
    aria-label="Chat"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_timelineCardButton"
    role="button"
    tabindex="0"
  >
    <div
      class="mx_RoomHeader_button_indicator_bg"
    />
    <div
      class="mx_RoomHeader_button_indicator mx_RoomHeader_button_indicator--red"
    />
  </div>
  <div
    aria-current="false"
    aria-label="Threads"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RoomHeader_button--unread mx_RightPanel_threadsButton"
    data-testid="threadsButton"
    role="button"
    tabindex="0"
  >
    <div
      class="mx_RoomHeader_button_indicator_bg"
    />
    <div
      class="mx_RoomHeader_button_indicator mx_RoomHeader_button_indicator--red"
    />
  </div>
  <div
    aria-current="false"
    aria-label="Notifications"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_notifsButton"
    role="button"
    tabindex="0"
  />
  <div
    aria-current="false"
    aria-label="Room info"
    class="mx_AccessibleButton mx_RoomHeader_button mx_RightPanel_roomSummaryButton"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;
